[tool.poetry]
name="roboswag"
version = "0.2.0"
description = "Test framework for auto-generating libraries from OpenAPI specification file."
license = "Apache-2.0"
authors = ["Mateusz Nojek <matnojek@gmail.com>", "Bartlomiej Hirsz <bartek.hirsz@gmail.com>"]
readme =  "./README.md"
homepage =  "https://pypi.org/project/roboswag"
repository = "https://github.com/MarketSquare/roboswag"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Tool",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
]
keywords = ["testing",  "api", "testautomation", "openapi", "robotframework"]
packages = [{include = "roboswag"}]
include = ["*.jinja"]

[tool.poetry.dependencies]
python = "^3.7"
robotframework = ">=4.1"
requests = "^2.27.1"
urllib3 = "^1.26.9"
black = "^22.3.0"
Jinja2 = "^3.1.2"
prance = "^0.21.8"
PyYAML = "^6.0"
jsonschema = "^4.5.1"
openapi-spec-validator = "^0.4.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
invoke = "^1.7.1"
mypy = "^0.960"
pylint = "^2.13.9"
types-PyYAML = "^6.0.7"
types-requests = "^2.27.29"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roboswag = "roboswag:run_roboswag"

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "prance.*",
    "robot.*",
    "openapi_core.*",
    "invoke",
    "uvicorn",
]
ignore_missing_imports = true

[tool.black]
line-length = 120
target-version = ["py37"]

[tool.isort]
src_paths = [
    "roboswag"
]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pylint.'FORMAT CHECKER']
max-line-length=120

[tool.pylint.'SIMILARITIES CHECKER']
ignore-imports="yes"